// Тип услуги
Table service_type {
  id int [pk, increment]
  name varchar(255)
}

// Таблица полученных клиентом услуг
Table service {
  id int [pk, increment]
  client_id int
  type_id int

  indexes {
    client_id [name: 'IDX_E19D9AD219EB6921']
    type_id [name: 'IDX_E19D9AD2C54C8C93']
  }
}

// Таблица с услугами, достпуными для регистрации и настройками для них
Table services_registration {
  id int [pk, increment]
  service_type_id int [not null]
  name varchar(255) [not null]
  period_days int [not null]    
  updated_at datetime [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`]
}

// Список мест 
Table location {
  id int [pk, increment]
  name varchar(255) [not null]
  address varchar(255)
  created_by_id int
  updated_by_id int
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`]
}

// Таймслот
Table time_slot {
  id int [pk, increment]
  title varchar(255) [not null]
  type enum('single', 'recurring') [not null]
  location_id int [not null]
  capacity int [not null]
  start_date datetime [not null]
  end_date datetime [not null]
  status enum('active', 'archived') [not null, default: 'active']
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`]

  indexes {
    status [name: 'IDX_time_slot_status']
    (start_date, end_date) [name: 'IDX_time_slot_dates']
  }
}

// Настройки повторения для таймслота
Table time_slot_recurrence {
  time_slot_id int [pk]
  frequency enum('daily', 'weekly', 'monthly') [not null]
  interval int [not null, default: 1]
  end_type enum('never', 'date') [not null]
  end_value datetime
}

// Настройка для услуги, которая оказывается в некоторый таймслот
Table time_slot_service {
  id int [pk, increment]
  time_slot_id int [not null]
  service_type_id int [not null]
  default_capacity int [not null]
  booking_window int [not null]
  default_time time [not null]
}

// Событие создатся на основании настроек повторения для таймслота. 
// Например: для повторяющегося каждую неделю слота на протяжении 4 недель - 
// создатся 4 соыбтия на каждую из недель под каждую из услуг
Table event {
  id int [pk, increment]
  time_slot_service_id int [not null]
  capacity int [not null]
  datetime datetime [not null]
  remaining_capacity int [not null, default: 'capacity'] // Автоматический расчёт
  service_type_id int [not null] // подставляется по триггеру, нужно для денормализации данных
}

// Описание триггеров для данной таблицы:

// -- Триггер для обновления remaining_capacity после вставки записи в event_client
// CREATE TRIGGER update_remaining_capacity_insert
// AFTER INSERT ON event_client
// FOR EACH ROW
// BEGIN
//   UPDATE event e
//   SET e.remaining_capacity = e.capacity - (
//     SELECT COUNT(*) 
//     FROM event_client ec 
//     WHERE ec.event_id = NEW.event_id
//     AND ec.status = 'attend'
//   )
//   WHERE e.id = NEW.event_id;
// END$$

// -- Триггер для обновления remaining_capacity после обновления записи в event_client
// CREATE TRIGGER update_remaining_capacity_update
// AFTER UPDATE ON event_client
// FOR EACH ROW
// BEGIN
//   IF NEW.status != OLD.status THEN
//     UPDATE event e
//     SET e.remaining_capacity = e.capacity - (
//       SELECT COUNT(*) 
//       FROM event_client ec 
//       WHERE ec.event_id = NEW.event_id
//       AND ec.status = 'attend'
//     )
//     WHERE e.id = NEW.event_id;
//   END IF;
// END$$

// -- Триггер для обновления remaining_capacity после удаления записи из event_client
// CREATE TRIGGER update_remaining_capacity_delete
// AFTER DELETE ON event_client
// FOR EACH ROW
// BEGIN
//   UPDATE event e
//   SET e.remaining_capacity = e.capacity - (
//     SELECT COUNT(*) 
//     FROM event_client ec 
//     WHERE ec.event_id = OLD.event_id
//     AND ec.status = 'attend'
//   )
//   WHERE e.id = OLD.event_id;
// END$$

// -- Триггер для автоматического заполнения:
// CREATE TRIGGER set_service_type 
// BEFORE INSERT ON event
// FOR EACH ROW
// SET NEW.service_type_id = (
//   SELECT service_type_id 
//   FROM time_slot_service 
//   WHERE id = NEW.time_slot_service_id
// );

// Список записавшихся на определнное событие
Table event_client {
  id int [pk, increment]
  event_id int [not null]
  client_id int [not null]
  volounteer_id int [not null] // id записавшего волонтера
  status enum('attend', 'absent') [not null, default: 'absent']
}

// Клиент 
Table client {
  id int [pk, not null]
  name varchar(255)
}

// Настройки по клиенту: блокировки
Table client_blocks {
  client_id int [pk, not null]
  blocked_reason text
  blocked_at datetime
}

Table client_group {
  id int pk [not null]
  name varchar(255) [not null]
  updated_at datetime
}

Table client_group_service {
  id int pk [not null]
  group_id int [not null]
  service_registration_id int [not null]
  updated_at datetime
}

Table volounteer {
  id int pk [not null]
}


// References
Ref: service.type_id > service_type.id
Ref: service.client_id > client.id
Ref: time_slot.location_id > location.id
Ref: time_slot_recurrence.time_slot_id > time_slot.id [delete: cascade]
Ref: time_slot_service.time_slot_id > time_slot.id [delete: cascade]
Ref: time_slot_service.service_type_id > services_registration.id
Ref: event.time_slot_service_id > time_slot_service.id
Ref: client.id > event_client.client_id 
Ref: event_client.event_id > event.id
Ref: volounteer.id > event_client.volounteer_id 
Ref: services_registration.service_type_id > service_type.id 
Ref: client_blocks.client_id > client.id
Ref: client_group_service.group_id > client_group.id
Ref: client_group_service.service_registration_id > services_registration.id




